# kpeg

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Messages.sh  README  TODO  kpeg.desktop  org.kde.kpeg.desktop  pege.desktop
boards/: CMakeLists.txt
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt  hisc-app-kpeg.svgz  hisc-app-pege.svgz
sounds/: CMakeLists.txt
src/: CMakeLists.txt  board.cpp  board.h  gameview.cpp  gameview.h  hole.cpp  hole.h  kpeg.kcfg  kpegui.rc  main.cpp  movement.cpp  movement.h  peg.cpp  peg.h  pege.kcfg  pegeui.rc  puzzle.cpp  puzzle.h  settings.kcfgc  window.cpp  window.h
src/qml/: CanvasItem.qml  Peg.qml  logic.js  main.qml
themes/: CMakeLists.txt  default-blue.desktop  default-blue.svgz  default-green.desktop  default-green.svgz  default-purple.desktop  default-purple.svgz  default-red.desktop  default-red.svgz  default.desktop  default.svgz
